syntax = "proto3";

package systemdata;

option csharp_namespace = "SystemData.Grpc";
option java_multiple_files = true;
option java_package = "com.systemdata.grpc";

// 现有的设备指标消息...
service DeviceMetricService {
  rpc Report(stream DeviceMetricMessage) returns (DeviceMetricAck);
}

message DeviceMetricMessage {
  int32 placeId = 1;
  string ip = 2;
  int64 time = 3;
  int32 cFlag = 4;
  repeated DeviceMetricItem metrics = 5;
  
}

message DeviceMetricItem {
  int32 tid = 6;
  double value = 7;
}


message DeviceMetricAck {
  int32 code = 1;
  string message = 2;
}